fix (changed responsive widths & title invisibility)

--- a/css/style.scss
+++ b/css/style.scss
@@ -173,7 +173,7 @@ a {
 
 			@media only screen and (max-width: $tablet-max) {
 				@include grid-shift(0);
-				@include grid-column(11);
+				@include grid-column(12);
 
 				margin-bottom: 0px;
 				margin-top: 50px;
@@ -240,7 +240,7 @@ a {
 
 			@media only screen and (max-width: $tablet-max) {
 				@include grid-shift(0);
-				@include grid-column(11);
+				@include grid-column(12);
 
 				margin-top: 50px;
 			}
@@ -273,7 +273,7 @@ a {
 			@include grid-column(10);
 
 			@media only screen and (max-width: $tablet-max) {
-				@include grid-column(11);
+				@include grid-column(12);
 				@include grid-shift(0);
 			}
 
@@ -345,14 +345,13 @@ a {
 						@include grid-shift(0);
 					}
 				}
-				@media only screen and (min-width: $tablet-max) {
-					.project--morewidth {
-						@include grid-column(9);
-					}
+				.project--morewidth {
+					
+					@media only screen and (min-width: $tablet-max) {
+							@include grid-column(9);
+					}	
 				}
-				
 			}
-			
 			
 			.work__item__underline {
 				@include grid-shift(2);
@@ -469,10 +468,15 @@ a {
 		}
 
 		.project__terug {
+			@include grid-column(3);
 			@include grid-shift(1);
-			@include grid-column(10);
+
+			@media only screen and (max-width: $tablet-max) {
+				@include grid-shift(0);
+			}
+
 			font-style: italic;
-			z-index: 5;
+			z-index: 10;
 		}
 
 		.project__header {
